# kuBig2025

./: .gitattributes  .gitignore  .infinit.c.swp  CMakeLists.txt  README.md
ATmega128/: ch1_1_led.c  ch1_2_led2.c  ch3_8_countFND.c
c_example/: CMakeCache.txt  Makefile  arithmetics  arithmetics.c  charNumber  cmake_install.cmake  fourBit2  fourBit2.c  increment  limit  limit.c  makefile  qsort.c  sizeof  triangle  triangle2  triangle2.c
c_example/bowling/: CMakeLists.txt  tablecreate.sql
c_example/bowling/include/: .env  dotevn.h
c_example/bowling/src/: bowlingsql.c
c_example/day3/string/: CMakeLists.txt  main.c  makefile  string
c_example/sqlQuery/: CMakeLists.txt  bookSql  bookSql.c  createDbTable.sql  insertdata.sql
c_example/sqlQuery/include/: booksql.h
c_example/sqlQuery/src/: bookSql.c  main.c
cpp/: CMakeLists.txt  hello  hello.cpp  hello2  hello2.cpp  reference.cpp  swap  swap.cpp
data/: info.txt  test.txt  text.txt
docker_test/: Dockerfile  compose.yml  requirements.txt
ds/: testArray  testArray.c  testArray2  testArray2.c
finalproject/: Web.py
finalproject2/: .gitignore  Web.py  mmm.db  models.py  requirements.txt
ml_dl_python/: a01_jupyter.ipynb  a02_fish.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_linear_reg.ipynb  a08_polynomial_reg.ipynb  a09_classification.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a18_transformer.ipynb  a19_logistic_mnist.ipynb  a20_kerasdeep.ipynb  a21_keras2.ipynb  a22_convolustion.ipynb  a23_rnn.ipynb  a24_lstm_gru.ipynb  a26_gym_cartpole_v1.ipynb  best-cnn-model.h5  best-model.h5  model.weights.h5
ml_dl_python/dl_module/: CMakeLists.txt  zmp_client_.py  zmq_client.cpp  zmq_image_client.py  zmq_image_server.py  zmq_server.cpp  zmq_server_dl.py
network/: CMakeLists.txt  hello_client.c  shm_server
opencv/part7/: 59_cnn_training.ipynb  60_google_vision.cpp  61_google_camera.cpp  62_dnnface.cpp  CMakeLists.txt  best-cnn-model.pb
orange3/: basket_analysis.csv  basket_data  bts-word.ows  bts-word.ows.swp.p  classification  corelation.py  covid19_orange.ows  healthcare.ows  heart_tree  heath_new_data.csv  housePrice  housePrice_submit.csv  kmeans.ows  mlp_test.py  orange-script02.py  orange_script01.py  regression.ows  stacking  stop_words.txt  untitled.ows Copy path  xgboost_parameter.ipynb
python/: a00_default.py  a01.py  a04_print.py  a07_locals_vars.py  a08_str_indexing.py  a09_operator.py  a17_list.py  a18_list_method.py  a19_range_enmerate.py  a20_tuple.py  a21_cPython_import.py  a24_while.py  a25_time.py  a27_minmaxsum.py  a29_default_arg.py  a31_return_value.py  a34_lru_cache.py  a37_file_1.py  a39_file_descriptor.py  example1.py  example2.py  example3.py  kubig2025.code-workspace  main  mymodule.c  pythoninterpreter  pythoninterpreter.c  pythoninterpreter2  pythoninterpreter2.c  setup2.py
raspberrypi/: i2c_rgb_led_switch.c  led_switch_driver_native  led_switch_driver_native.c  makefile
shellScript/: envTest
shellScript1/: cron_config.txt  flow_exec.sh  hello.sh  log.txt
smartpoint/: CMakeLists.txt  ex10  ex11  ex11_moveClass.cpp  ex12  ex12_variantOptional.cpp  ex13  ex14  ex14_anyncFuture.cpp  ex15  ex16  ex17  ex17_final2.cpp  ex2  ex3  ex3_deleter.cpp  ex4  ex4_shared_ptr.cpp  ex5  ex5_memoryLeak.cpp  ex6  ex6_weakedPtr.cpp  ex7  ex7_vectorSmart.cpp  ex8  ex8_treeSmart.cpp  ex9  ex9_forward.cpp
src/: main.c
stl/: 10.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex10_forClass  ex11  ex11_nullptr.cpp  ex12  ex12_constexprestion.cpp  ex13_array.cpp  ex14  ex14_priority_queue.cpp  ex15  ex15_unordered_map.cpp  ex16  ex16_transform.cpp  ex17_1  ex17_2  ex17_sort_fstream.cpp  ex17_sort_fstream2.cpp  ex18  ex18_execution.cpp  ex1_vector.cpp  ex2_string_vector.cpp  ex4_string.cpp  ex5_string_find.cpp  ex6_iterator.cpp  (+9 more)
(+766 files in other folders)
