cmake_minimum_required(VERSION 3.10)
project(MainProject)

# 내부 CMakeLists.txt 포함

#add_subdirectory(c_example/sqlQuery)
add_subdirectory(c_example/day1)
add_subdirectory(c_example/day2)  
add_subdirectory(c_example/day3)
#add_subdirectory(c_example/bowling)
#add_subdirectory(cpp)
add_subdirectory(stl)
add_subdirectory(smartpoint)
add_subdirectory(network/ipc)
add_subdirectory(network/tcp_udp)
add_subdirectory(network/util)
add_subdirectory(network/multiProcess)